# kokkos_playground

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  env.sh  justfile  main.cpp  subview.cpp
src/: CMakeLists.txt
src/kokkos_kernels_spmv/: CMakeLists.txt  kokkos_kernels_spmv.cpp
src/kokkos_matmul/: CMakeLists.txt  kokkos_matmul.cpp
src/kokkos_shifted_add/: CMakeLists.txt  kokkos_shifted_add_local_view.cpp
